# caps-lock-auto-switch

./: .gitignore  .markdownlint.yaml  Cargo.toml  LICENSE  README.md  changelog  config.yaml  debian-build.sh
.github/workflows/: build.yml  lint-build.yml  lint.yml  release.yml
capslock-auto-switch/DEBIAN/: changelog  control  postinst
capslock-auto-switch/etc/systemd/user/: capslock-auto-switch.service
debian-scripts/: Dockerfile  changelog.sh  man.1
debian/DEBIAN/: conffiles  control  postinst  postrm
src/: buffer_process.rs  config.rs  main.rs
